--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
       box-shadow: 0 0 10px #e63946;
     }
 
-    .calendar {
+    /* container para calendário e imagem */
+    .calendar-container {
+      display: flex;
+      align-items: center;
+      gap: 20px;
       margin-top: 20px;
     }
 
@@ -84,6 +88,16 @@
       border: none;
       font-size: 1rem;
     }
+
+    .calendar {
+      text-align: left;
+    }
+
+    .calendar img {
+      max-width: 150px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px black;
+    }
   </style>
 </head>
 <body>
@@ -94,9 +108,156 @@
     <button id="nao">NÃO</button>
   </div>
 
-  <div class="calendar">
-    <label for="data">Escolha a data:</label>
-    <input type="date" id="data" name="data">
+  <!-- container para calendário e imagem -->
+  <div class="calendar-container">
+    <div class="calendar">
+      <label for="data">Escolha a data:</label>
+      <input type="date" id="data" name="data">
+    </div>
+    <img src="fig01.png" alt="Imagem Rock">
+  </div>
+
+  <script>
+    const btnNao = document.getElementById("nao");
+
+    // faz o botão "NÃO" se mover sozinho de tempos em tempos
+    function moverBotao() {
+      const maxX = window.innerWidth - btnNao.offsetWidth - 20;
+      const maxY = window.innerHeight - btnNao.offsetHeight - 20;
+
+      const randomX = Math.floor(Math.random() * maxX);
+      const randomY = Math.floor(Math.random() * maxY);
+
+      btnNao.style.position = "fixed";
+      btnNao.style.left = `${randomX}px`;
+      btnNao.style.top = `${randomY}px`;
+    }
+
+    // mover a cada 1 segundo
+    setInterval(moverBotao, 1000);
+
+    // se tentar tocar/clicar, ele escapa na hora
+    btnNao.addEventListener("mouseenter", moverBotao);
+    btnNao.addEventListener("touchstart", moverBotao);
+
+    document.getElementById("sim").addEventListener("click", () => {
+      alert("🤘 <!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Vem meu bem 🤘</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: #111;
+      font-family: "Rock Salt", cursive, Arial, sans-serif;
+      color: #f5f5f5;
+      text-align: center;
+      overflow: hidden;
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 40px;
+      color: #e63946;
+      text-shadow: 2px 2px 8px black;
+    }
+
+    .buttons {
+      display: flex;
+      gap: 40px;
+      position: relative;
+      width: 400px;
+      height: 150px;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 40px;
+    }
+
+    button {
+      padding: 15px 40px;
+      font-size: 1.2rem;
+      font-weight: bold;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.1s;
+      position: absolute;
+    }
+
+    #sim {
+      background: #06d6a0;
+      color: black;
+      box-shadow: 0 0 10px #06d6a0;
+      left: 100px;
+    }
+
+    #sim:hover {
+      transform: scale(1.1);
+      background: #04a678;
+    }
+
+    #nao {
+      background: #e63946;
+      color: white;
+      box-shadow: 0 0 10px #e63946;
+    }
+
+    /* container para calendário e imagem */
+    .calendar-container {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 10px;
+      font-size: 1.3rem;
+      color: #f5f5f5;
+    }
+
+    input[type="date"] {
+      padding: 10px;
+      border-radius: 5px;
+      border: none;
+      font-size: 1rem;
+    }
+
+    .calendar {
+      text-align: left;
+    }
+
+    .calendar img {
+      max-width: 150px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px black;
+    }
+  </style>
+</head>
+<body>
+  <h1>Oi você é menina? 🤘</h1>
+
+  <div class="buttons">
+    <button id="sim">SIM</button>
+    <button id="nao">NÃO</button>
+  </div>
+
+  <!-- container para calendário e imagem -->
+  <div class="calendar-container">
+    <div class="calendar">
+      <label for="data">Escolha a data:</label>
+      <input type="date" id="data" name="data">
+    </div>
+    <img src="fig01.png" alt="Imagem Rock">
   </div>
 
   <script>
@@ -124,6 +285,11 @@
 
     document.getElementById("sim").addEventListener("click", () => {
       alert("🤘 Então bora curtir um bom Rock!");
+    });
+  </script>
+</body>
+</html>
+");
     });
   </script>
 </body>
